- updated array-generation strategy in property-test
- JOSS paper:
  * Fixed typo
  * Rewrote 'statement of need' paragraphs
  * Improved closing of the paper: how is package used by authors
- Documentation:
  * hardware and software version info now mentioned on performance page
  * example-usage separated out into separate file in docs/scripts
  * figure of example-usage improved to 600dpi
  * page on performance added, script for plots added in docs/scripts


v2020.4.3:
- Bugfix: corrected bounds for adjustable Trid function

v2020.4.2:
- Removed unused artificialMultiidelity.py
- De-duplicated borehole fidelities
- Added LICENSE file to source distribution
- Documentation:
  * updated copyright
  * updated develop install instructions
  * fixed typo: Burrin -> Currin
  * Added 'Adjustable' to titles of adjustable function pages
- JOSS paper:
  * Added statement of need paragraph

v2020.4.1:
- Added Manifest.in to include requirements and docs in source distribution

v2020.4.0:
- Added documentation for adjustable functions
- Added documentation to bounds variables and MultiFidelityFunction instances
- Expanded getting-started page of documentation
- Documentation: added generic introduction
- Updated JOSS paper:
  * added acknowledgements, 
  * added Forrester reference
  * itemized functions included in package
  * extended introduction of multi-fidelity definition
  * added scalability comparison script + results figure
  * updated surjanovic and bingham entry in bib-file
- Added README badges: conda, JOSS, license. Now formatted in a table
- Dependencies automatically installed upon install
- Requirements for tests moved to `requirements-dev.txt`
- Separated requirements into regular 'requirements' and 'requirements-dev'
- Added requirements-dev install instruction to README
- __init__ now uses pkg_resources to version number, defined in setup.py
- Added simple logo to documentation
- Added conda install instruction