@@ -8,7 +8,8 @@ since last version:
   * hardware and software version info now mentioned on performance page
   * example-usage separated out into separate file in docs/scripts
   * figure of example-usage improved to 600dpi
-  * page on performance added, script for plots added in docs/scripts
+  * page on performance added, script for plots added in docs/scripts, including
+    original matlab source code for borehole, currin and park91a/b
 
 
 v2020.4.3:
